Auth-service code coverage fixed.